README: Java memory + ZGC guidance for clients and server
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>